# just-dice-rs

./: Cargo.toml  README.md  Rustfmt.toml  rust-toolchain.toml
assets/: compress.js  positions.json
assets/audio/: generate.sh  roll-many.pda  roll-one.pda  roll-some.pda  shake.pda
src/: game.rs  lib.rs  prelude.rs
src/components/: cursor.rs  die.rs  fade.rs  lock.rs  mod.rs  stat.rs
src/services/: input.rs  mod.rs  random.rs  settings.rs  shaking.rs  theme_manager.rs
src/utils/: animated.rs  bit_image.rs  bitmap_ext.rs  bytes_decoder.rs  cached.rs  easing.rs  float_ext.rs  math_traits.rs  mod.rs  pool.rs  rect_ext.rs  smooth.rs  toggle.rs  vector_2d.rs  vector_3d.rs
